Fix attach file button width on iOS Safari (#5167)
* Fix attach file button width on iOS Safari

* Update PR number

--- a/packages/fluent-theme/src/components/sendBox/AddAttachmentButton.module.css
+++ b/packages/fluent-theme/src/components/sendBox/AddAttachmentButton.module.css
@@ -1,10 +1,10 @@
 :global(.webchat-fluent) .sendbox__add-attachment {
-  display: grid
+  display: grid;
 }
 
 :global(.webchat-fluent) .sendbox__add-attachment-input {
   font-size: 0;
   height: 0;
   opacity: 0;
-  width: 0;
+  width: 1px; /* iOS Safari does not honor 0px for the width. */
 }
